tests/e2e/cases/service-private-field.clawr
service Service {
    func field() -> integer => self.field
    helper func help() -> integer => 42

data:
    field: integer
}

func makeService(field: integer) -> ref Service => { field: field }

ref aService: Service = makeService(42)
print aService.field
print aService.help()
